# universo

./: .gitignore  .merlin  GNUmakefile  Makefile  NOTES  README  README.md  TODO  universo  universo.opam
LaTeX/: universo.tex
LaTeX/LICS/: Makefile  minted.sty  universo.tex
LaTeX/LICS/_minted-universo/: FAF398E136CAEB20D0DAE8B60D540738CC4196C53773A863C880FE9BE95C7E86.pygtex  listing1.pygtex  listing10.pygtex  listing11.pygtex  listing12.pygtex  listing13.pygtex  listing14.pygtex  listing15.pygtex  listing16.pygtex  listing17.pygtex  listing18.pygtex  listing2.pygtex  (+6 more)
LaTeX/proposal/: internship.tex
doc/: DOCUMENTATION.md
doc/sections/: about.md  configuration.md  options.md  theory.md
encoding/: universo.dk
encodings/: cts-cast.dk  cts-func-cast.dk  private.dk  public.dk  universo.dk
meta/: simplify.sh
meta/simplify/: Makefile  matita_basics_logic.dk
src/: .merlin  cic.ml  cic.mli  cmd.ml  configuration.ml  constraints.ml  constraints.mli  dune  elaboration.ml  elaboration.mli  export.ml  export.mli  files.ml  indent.ml  reconstruction.ml  reconstruction.mli  theory.ml  theory.mli  uconv.ml  uconv.mli  universes.ml  universo.ml  uvar.ml  uvar.mli
src/checking/: checker.ml  checking.ml  dune  universes.ml
src/common/: constraints.ml  dune  files.ml  import.ml  log.ml  logic.ml  oracle.ml  universes.ml
src/elaboration/: dune  elaborate.ml  elaboration.ml  var.ml
src/solving/: dune  solver.ml  utils.ml  z3arith.ml  z3cfg.ml  z3cfg.mli  z3solver.ml  z3syn.ml
tests/: Makefile
tests/basic/: run.sh  universo_cfg.dk
utils/: Makefile
(+115 files in other folders)
