(library
	(name api)
	(synopsis "Universo API")
	(modules)
	(libraries common elaboration checking solving)
	(library_flags (-cclib -lstdc++)))

(executable
        (name universo)
        (public_name universo)
        (package universo)
        (libraries common elaboration checking solving dedukti))
